Increase the application's heap memory when running inside embedded container.